--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     //for indicators 2.1.3
     implementation "com.wang.avi:library:$rootProject.aviLibrary"
 
+    implementation "com.miguelcatalan:materialsearchview:$rootProject.searchView"
+
     // dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
     testCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
