--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,14 @@ android {
             release {
                 minifyEnabled false
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-                buildConfigField("String", "BASE_URL", "\"http://itunes.apple.com\"")
-                buildConfigField("String", "API_KEY", "\"5b7452a65caf4eb69e6172419182007\"")
+                buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3\"")
+                buildConfigField("String", "IMAGE_BASE_URL", "\"https://image.tmdb.org/t/p/w500\"")
+                buildConfigField("String", "API_KEY", "\"d641105fce46ab50297f6b84d58779ee\"")
             }
             debug {
-                buildConfigField("String", "BASE_URL", "\"http://itunes.apple.com\"")
-                buildConfigField("String", "API_KEY", "\"5b7452a65caf4eb69e6172419182007\"")
+                buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3\"")
+                buildConfigField("String", "IMAGE_BASE_URL", "\"https://image.tmdb.org/t/p/w500\"")
+                buildConfigField("String", "API_KEY", "\"d641105fce46ab50297f6b84d58779ee\"")
             }
         }
     }
