--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.player.PlayerActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask">
-        </activity>
-
-        <activity android:name=".ui.favouriteList.FavouriteActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
+        <activity android:name=".ui.movieDetails.MovieDetailsActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
